force-app/main/default/objects/Course__c/fields/Course_Access__c.field-meta.xml
<CustomField>
    <fullName>Course_Access__c</fullName>
    <label>Course Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Preview</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>