force-app/main/default/objects/Course__c/fields/Course_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Course_Nickname__c</fullName>
    <inlineHelpText
  >An internal, short name for the course; typically the industry it refers to. For example: SLG, K12, HED, K12 &amp; HED.</inlineHelpText>
    <label>Course Nickname</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>