force-app/main/default/objects/Course__c/fields/Image_Uri__c.field-meta.xml
<CustomField>
    <fullName>Image_Uri__c</fullName>
    <label>Image Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>