force-app/main/default/objects/Course__c/fields/Standardized_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Course_Name__c</fullName>
    <label>Standardized Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>