force-app/main/default/objects/Course__c/listViews/Active_Courses.listView-meta.xml
<ListView>
    <fullName>Active_Courses</fullName>
    <columns>NAME</columns>
    <columns>Course_Access__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Courses</label>
</ListView>