force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Standardized_Course_Name__c</columns>
    <columns>Course_Nickname__c</columns>
    <columns>Course_Access__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>External_Course_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>